<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    card_view:cardCornerRadius="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:text="@string/msg_service_report_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:background="@drawable/btn_submit"/>

            <Button
                android:id="@+id/btnNo"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/no"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:background="@drawable/btn_submit"/>

        </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>
