<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:drawableTint="@color/white"
                android:hint="@string/hint_username"
                android:text=""
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="50"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:drawableTint="@color/white"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:text=""
                android:inputType="textPassword"
                android:maxLength="20"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight" />

            <TextView
                android:id="@+id/txtIMEI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="IMEI - "
                android:textColor="@color/white"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_btn_with_stroke"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="13sp" />


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/txtVersionNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:text="@string/versionNo"
        android:textColor="@color/white"
        android:textSize="13sp" />

</RelativeLayout>
