<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attendance"
                        android:textAllCaps="true"
                        android:textColor="@color/title"
                        android:textSize="@dimen/title_size" />

                    <View
                        android:layout_width="30dp"
                        android:layout_height="1.5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/title" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgAttendanceReport"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/ic_calendar" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/welcome_back"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUser"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/avatar"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp" />

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnClockOut"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:text="@string/clock_out"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_clock_out"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
