<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/service_report"
                        android:textColor="@color/title"
                        android:textSize="@dimen/title_size" />

                    <View
                        android:layout_width="30dp"
                        android:layout_height="1.5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/title" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/help"
                    android:textColor="@color/title"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imgSync"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_sync_white"
                    android:backgroundTint="@color/white"
                    android:padding="5dp"
                    android:visibility="visible" />


            </LinearLayout>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_btn_dark"
                android:text="Add"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvServiceReport"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

                <TextView
                    android:id="@+id/txtError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/no_data_available"
                    android:textColor="@color/white"
                    android:visibility="gone" />

            </RelativeLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
